# presales-bot

./: README.md  docker-compose.yml
backend/: .env.template  main.py  prestart.sh  pyproject.toml
